<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_shape">

    <ImageView
        android:id="@+id/iconReferralLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/ic_lokasi_rujukan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/textTitleReferral"
        style="@style/textStyle_12_semiBold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconReferralLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAddressReferral"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="2dp"
        android:text="@string/alamat"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textRegionReferral"
        app:layout_constraintStart_toEndOf="@+id/iconReferralLocation" />

    <TextView
        android:id="@+id/textAddressReferralContent"
        style="@style/textStyle_10"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:maxLines="1"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textRegionReferralContent"
        app:layout_constraintStart_toEndOf="@+id/textAddressReferral"/>

    <TextView
        android:id="@+id/textRegionReferral"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="2dp"
        android:text="Wilayah :"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textTelephoneReferral"
        app:layout_constraintStart_toEndOf="@+id/iconReferralLocation" />

    <TextView
        android:id="@+id/textRegionReferralContent"
        style="@style/textStyle_10"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:maxLines="1"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textTelephoneReferralContent"
        app:layout_constraintStart_toEndOf="@+id/textRegionReferral"/>

    <TextView
        android:id="@+id/textTelephoneReferral"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="2dp"
        android:text="@string/telepon"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textProvinceReferral"
        app:layout_constraintStart_toEndOf="@+id/iconReferralLocation"/>

    <TextView
        android:id="@+id/textTelephoneReferralContent"
        style="@style/textStyle_10"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:maxLines="1"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toTopOf="@+id/textProvinceReferralContent"
        app:layout_constraintStart_toEndOf="@+id/textTelephoneReferral"/>

    <TextView
        android:id="@+id/textProvinceReferral"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="3dp"
        android:text="@string/provinsi"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iconReferralLocation" />

    <TextView
        android:id="@+id/textProvinceReferralContent"
        style="@style/textStyle_10"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:layout_marginBottom="3dp"
        android:textColor="@color/textColor3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textTelephoneReferral" />

    <Button
        style="@style/ShapeAppearance.App.SmallComponent"
        android:id="@+id/btnCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/panggil"
        android:textSize="10sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_sans"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:rippleColor="@color/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>