<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="94dp"
    android:layout_marginBottom="8dp"
    android:background="@drawable/bg_shape">

    <ImageView
        android:id="@+id/imgRowNews"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image" />

    <TextView
        style="@style/textStyle_12_semiBold"
        android:id="@+id/textTitleNews"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        app:layout_constraintStart_toEndOf="@+id/imgRowNews"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTypeNewsContent"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="11dp"
        android:text="@string/berita"
        app:layout_constraintBottom_toTopOf="@+id/textTimeNews"
        app:layout_constraintStart_toEndOf="@+id/imgRowNews" />

    <TextView
        android:id="@+id/textAddressReferralContent"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toEndOf="@+id/textTypeNewsContent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleNews" />

    <TextView
        android:id="@+id/textTimeNews"
        style="@style/textStyle_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="11dp"
        android:textColor="@color/textColor2"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgRowNews" />

    <Button
        style="@style/ShapeAppearance.App.SmallComponent"
        android:id="@+id/btnRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/baca"
        android:textSize="10sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_sans"
        android:typeface="normal"
        app:cornerRadius="10dp"
        app:rippleColor="@color/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>